poc/test/e2e/testdata/testRateLimitBase.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: test-aig-ratelimit
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-aig-ratelimit
  namespace: default
spec:
  gatewayClassName: test-aig-ratelimit
  listeners:
    - name: http
      protocol: HTTP
      port: 80
