poc/test/e2e/testdata/testResourceTranslationMultipleGateways.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: test-multiple-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-multiple-gateway-1
  namespace: default
spec:
  gatewayClassName: test-multiple-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-multiple-gateway-2
  namespace: default
spec:
  gatewayClassName: test-multiple-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: aigateway.envoyproxy.io/v1alpha1
kind: LLMRoute
metadata:
  name: test-multiple-gateway
  namespace: default
spec:
  targetRefs:
    - name: test-multiple-gateway-1
      kind: Gateway
      group: gateway.networking.k8s.io
    - name: test-multiple-gateway-2
      kind: Gateway
      group: gateway.networking.k8s.io
  backends:
    - backendRef:
        name: foo-backend-multiple-gateway
        kind: Backend
        group: gateway.envoyproxy.io
    - backendRef:
        name: bar-backend-multiple-gateway
        kind: Backend
        group: gateway.envoyproxy.io
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Backend
metadata:
  name: foo-backend-multiple-gateway
  namespace: default
spec:
  endpoints:
    - fqdn:
        hostname: testupstream.default.svc.cluster.local
        port: 80
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Backend
metadata:
  name: bar-backend-multiple-gateway
  namespace: default
spec:
  endpoints:
    - fqdn:
        hostname: testupstream.default.svc.cluster.local
        port: 80
